# elabftw

./: .babelrc  .bowerrc  .codeclimate.yml  .codespellrc  .dockerignore  .editorconfig  .eslintrc.js  .gitignore  .htaccess  .htmlvalidate.json  .mailmap  .nanoignore  .php-cs-fixer.dist.php  .php_cs  .php_cs.dist  .scrutinizer.yml  .snyk  .stylelintrc  .stylelintrc.json  .twig_cs.php  .yarnrc.yml  CHANGELOG  CHANGELOG.md  CITATION.cff  COMM-LICENSE  CONTRIBUTING.md  DOCUMENTATION  DOCUMENTATION.md  FEATURES  FUNDING.yml  GOVERNANCE.md  Gruntfile.js  INSTALL  PASTIE  README  README.md  SECURITY.md  TODO  TRADEMARK.md  add.php  (+101 more)
.circleci/: config.yml
.dependabot/: config.yml
.github/: FUNDING.yml  ISSUE_TEMPLATE  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.vim/: coc-settings.json
admin/: .htaccess  config-example.ini  config.ini-EXAMPLE  config.php  config.php-EXAMPLE  version.ini
apidoc/: apidoc.json  header.md
app/: add.php  admin-ajax.php  admin-exec.php  api.php  check_for_updates.php  common.inc.php  create_item.php  delete.php  delete_file.php  download.php  duplicate_item.php  editDB-exec.php  editXP-exec.php  editinplace.php  footer.inc.php  functions.inc.php  head.inc.php  import.php  init.inc.php  lock.php  login-exec.php  login-saml.php  logout.php  order.php  quicksave.php  (+12 more)
containers/chem-plugin/indigo/: NOTICE  pyproject.toml
containers/chem-plugin/indigo/service/: app.py  requirements.txt
containers/chem-plugin/indigo/service/v2/: common_api.py  indigo_api.py  validation.py
containers/chem-plugin/indigo/service/v2/common/: config.py  util.py
(+3883 files in other folders)
